<resources>
    <string name="app_name">Mercadito TEC</string>
    <string name="contrasena">Contraseña</string>
    <string name="Correo_Institucional">Correo Institucional</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Registrar">Registrarse</string>
    <string name="CrearCuenta">Crear cuenta</string>
    <string name="Paso1">Paso 1: Verificate como Estudiante</string>
    <string name="Paso2">Paso 2: Completa tus datos personales</string>
    <string name="Verificar">Verificar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Telefono">Número de Teléfono</string>
    <string name="Omitir">Omitir</string>
    <string name="Confirmar">Confirmar</string>
    <string name="title_activity_main"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Mensajes">Mensajes</string>
    <string name="MisProductos">Mis Productos</string>
    <string name="MisServicios">Mis Servicios</string>
    <string name="Productos">Productos</string>
    <string name="Servicios">Servicios</string>
    <string name="Perfil">Perfil</string>
    <string name="Salir">Salir</string>
    <string name="Inicio">Inicio</string>
    <string name="VenderNuevo">Vender un Producto</string>
    <string name="MisProductosVenta">Mis productos en venta</string>
    <string name="MisPuntos">Mis Punto de Canje:</string>
    <string name="PerfilEstudiante">Datos Personales</string>
    <string name="Compras">Compras</string>
    <string name="Ventas">Ventas</string>
    <string name="Deshabilitar">Deshabilitar</string>
    <string name="Editar">Editar</string>
    <string name="Descripcion">Descripción</string>
    <string name="CalificacionVendedor">Calificación del Vendedor</string>
    <string name="LugarEntrega">Lugar de Entrega</string>
    <string name="FormaPago">Forma de Pago</string>
    <string name="NombreProducto">Nombre del Producto</string>
    <string name="Continuar">Continuar</string>
    <string name="CategoriaDelProducto">Categoria del Producto</string>
    <string name="Fotos">Fotos del Producto (Máximo 5)</string>
    <string name="SelectFotos">Seleccionar Fotos</string>
    <string name="LugaresEntrega">Lugares de Entrega para el producto</string>
    <string name="AgregarUbi">Agregar Ubicación</string>
    <string name="UbiActuales">Ubicaciones Agregadas</string>
    <string name="Metodos">Métodos de Pago </string>
    <string name="Precio">Precio</string>
    <string name="Efectivo">Efectivo</string>
    <string name="TransferenciaBancaria">Transferencia Bancaria</string>
    <string name="Sinpe">SINPE Móvil</string>
    <string name="Puedeseleccionarmasdeuno">Puede seleccionar más de uno</string>
    <string name="Colones">₡</string>
    <string name="Cuenta">Cuenta:</string>
    <string name="Numero">Número:</string>
    <string name="ValorPunto">Valor del Punto de Canje:</string>

    NombreProducto
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>