<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/grp1">
        <item
            android:id="@+id/nav_home"
            android:title="@string/Inicio" />
        <item
            android:id="@+id/messagesFragment"
            android:title="@string/Mensajes" />
        <item
            android:id="@+id/profileFragment"
            android:title="@string/Perfil" />
    </group>
    <group android:id="@+id/grp2">
        <item
            android:id="@+id/productsFragment"
            android:title="@string/Productos" />
        <item
            android:id="@+id/servicesFragment"
            android:title="@string/Servicios" />

    </group >
    <group android:id="@+id/grp3">
        <item
            android:id="@+id/myProductsFragment"
            android:title="@string/MisProductos" />
        <item
            android:id="@+id/myServicesFragment"
            android:title="@string/MisServicios" />
    </group>
</menu>