<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mercaditotec.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/messagesFragment"
        android:name="com.example.mercaditotec.ui.Messages.MessagesFragment"
        android:label="@string/Mensajes"
        tools:layout="@layout/messages_fragment" />
    <fragment
        android:id="@+id/myProductsFragment"
        android:name="com.example.mercaditotec.ui.MyProducts.MyProductsFragment"
        android:label="@string/MisProductos"
        tools:layout="@layout/my_products_fragment" />
    <fragment
        android:id="@+id/myServicesFragment"
        android:name="com.example.mercaditotec.ui.MyServices.MyServicesFragment"
        android:label="@string/MisServicios"
        tools:layout="@layout/my_services_fragment" />
    <fragment
        android:id="@+id/productsFragment"
        android:name="com.example.mercaditotec.ui.Products.ProductsFragment"
        android:label="@string/Productos"
        tools:layout="@layout/products_fragment" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.mercaditotec.ui.Profile.ProfileFragment"
        android:label="@string/Perfil"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/servicesFragment"
        android:name="com.example.mercaditotec.ui.Services.ServicesFragment"
        android:label="@string/Servicios"
        tools:layout="@layout/services_fragment" />
</navigation>